[project]
name = "search-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "gianglt1",email = "gianglt2198@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "beeai-framework[wikipedia] (>=0.1.81,<0.2.0)",
    "langchain-openai (>=0.3.0,<1.0.0)",
    "langchain-core (>=0.3.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
